# maven-cmake-conan

./: CMakeLists.txt  ConanProvider.cmake  GNUToolchain.cmake  README.md  conanfile.txt  pom.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/example/: CMakeLists.txt  app.cpp
src/main/cpp/format/: CMakeLists.txt  foo.cpp
src/main/include/: foo.h
src/main/java/example/: App.java
src/test/cpp/: CMakeLists.txt
